--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -31,7 +31,9 @@
       </nav>
       <!--Контактна інформація, список контактів-->
       <ul class="list contacts">
-        <li class="item"><a href=" mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li class="item">
+          <a href=" mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        </li>
         <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </div>
@@ -130,16 +132,18 @@
   </main>
   <!--Підвал, логотип посилання на головну, адреса, список контактів-->
   <footer class="footer">
-    <div class="container"><a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
+    <div class="container">
+      <a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
           class="logo-studio">Studio</span></a>
       <address>
         <ul class="list contacts-ft">
           <li class="item">
             <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-              class="link address">м. Київ,
-              пр-т Лесі Українки, 26</a>
+              class="link address">м. Київ, пр-т Лесі Українки, 26</a>
           </li>
-          <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
           <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
