--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -32,7 +32,9 @@
             </nav>
             <!--Контактна інформація, список контактів-->
             <ul class="list contacts">
-                <li class="item"><a href=" mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item">
+                    <a href=" mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
                 <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
@@ -51,63 +53,69 @@
                 </ul>
                 <!-- Секція приклади наших робіт -->
                 <ul class="list examples">
-                    <li class="item"><img src="./images/technocrack.jpg" alt="Інтернет сторінка з фотографіями людей"
-                            width="370" height="294" />
+                    <li class="item">
+                        <img src="./images/technocrack.jpg" alt="Інтернет сторінка з фотографіями людей" width="370"
+                            height="294" />
                         <div class="signature">
                             <h2 class="title">Технокряк</h2>
                             <p>Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/poster-basketball.jpg" alt="Два чоловіки грають в баскетбол"
-                            width="370" height="294" />
+                    <li class="item">
+                        <img src="./images/poster-basketball.jpg" alt="Два чоловіки грають в баскетбол" width="370"
+                            height="294" />
                         <div class="signature">
                             <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                             <p>Дизайн</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/seafood-restaurant.jpg" alt="Риба" width="370" height="294" />
+                    <li class="item">
+                        <img src="./images/seafood-restaurant.jpg" alt="Риба" width="370" height="294" />
                         <div class="signature">
                             <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
                             <p>Додаток</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/project-prime.jpg" alt="Великі бездротові навушники" width="370"
+                    <li class="item">
+                        <img src="./images/project-prime.jpg" alt="Великі бездротові навушники" width="370"
                             height="294" />
                         <div class="signature">
                             <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
                             <p>Маркетинг</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/project-boxes.jpg" alt="біла і коричнева коробки" width="370"
-                            height="294" />
+                    <li class="item">
+                        <img src="./images/project-boxes.jpg" alt="біла і коричнева коробки" width="370" height="294" />
                         <div class="signature">
                             <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
                             <p>Додаток</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/inspiration-has-no-borders.jpg"
-                            alt="Монітор з інтернет сторінкою" width="370" height="294" />
+                    <li class="item">
+                        <img src="./images/inspiration-has-no-borders.jpg" alt="Монітор з інтернет сторінкою"
+                            width="370" height="294" />
                         <div class="signature">
                             <h2 class="title" lang="en">Inspiration has no Borders</h2>
                             <p>Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/limited-edition.jpg" alt="Розгорнута книга" width="370"
-                            height="294" />
+                    <li class="item">
+                        <img src="./images/limited-edition.jpg" alt="Розгорнута книга" width="370" height="294" />
                         <div class="signature">
                             <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
                             <p>Дизайн</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/lab-project.jpg" alt="Бірка з написом" width="370"
-                            height="294" />
+                    <li class="item">
+                        <img src="./images/lab-project.jpg" alt="Бірка з написом" width="370" height="294" />
                         <div class="signature">
                             <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
                             <p>Маркетинг</p>
                         </div>
                     </li>
-                    <li class="item"><img src="./images/growing-business.jpg" alt="Людина друкує на клавіатурі лаптопа"
-                            width="370" height="294" />
+                    <li class="item">
+                        <img src="./images/growing-business.jpg" alt="Людина друкує на клавіатурі лаптопа" width="370"
+                            height="294" />
                         <div class="signature">
                             <h2 class="title" lang="en">Growing Business</h2>
                             <p>Додаток</p>
@@ -119,16 +127,18 @@
     </main>
     <!--Підвал, логотип посилання на головну, адреса, список контактів-->
     <footer class="footer">
-        <div class="container"><a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
+        <div class="container">
+            <a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
                     class="logo-studio">Studio</span></a>
             <address>
                 <ul class="list contacts-ft">
                     <li class="item">
                         <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                            rel="noopener noreferrer nofollow" class="link address">м. Київ,
-                            пр-т Лесі Українки, 26</a>
+                            rel="noopener noreferrer nofollow" class="link address">м. Київ, пр-т Лесі Українки, 26</a>
                     </li>
-                    <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li class="item">
+                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
                     <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
                 </ul>
             </address>
