--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>
     <!--Блок герой!-->
     <section class="hero">
-      <div class="container">
+      <div class="hero-container">
         <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="button">Замовити послугу</button>
       </div>
