--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <h2 class="visually-hidden">Наші сильні якості</h2>
         <ul class="list strengths">
           <li class="item">
-            <h3 class="title">Увага до деталей</h3>
+            <h3 class="title antena">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="item">
-            <h3 class="title">Пунктуальність</h3>
+            <h3 class="title clock">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="item">
-            <h3 class="title">Планування</h3>
+            <h3 class="title diagram">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="item">
-            <h3 class="title">Сучасні технології</h3>
+            <h3 class="title astronaut">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -105,6 +105,19 @@
             <div class="card">
               <h3 class="title">Ігор Дем'яненко</h3>
               <p lang="en">Product Designer</p>
+              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </div>
             </div>
           </li>
           <li class="item">
@@ -113,6 +126,19 @@
             <div class="card">
               <h3 class="title">Ольга Рєпіна</h3>
               <p lang="en">Frontend Developer</p>
+              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </div>
             </div>
           </li>
           <li class="item">
@@ -121,6 +147,19 @@
             <div class="card">
               <h3 class="title">Микола Тарасов</h3>
               <p lang="en">Marketing</p>
+              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </div>
             </div>
           </li>
           <li class="item">
@@ -128,6 +167,19 @@
             <div class="card">
               <h3 class="title">Михайло Єрмаков</h3>
               <p lang="en">UI Designer</p>
+              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a>
+                <a href="#"><svg class="icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg></a>
+              </div>
             </div>
           </li>
         </ul>
