adds card icons

--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
             <img src="./images/igor-dem.jpg" alt="Чоловік у коричневій сорочці і окулярах" width="270" height="260" />
             <div class="card">
               <h3 class="title">Ігор Дем'яненко</h3>
-              <p lang="en">Product Designer</p>
-              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+              <p lang="en" class="paragraf">Product Designer</p>
+              <div class="card-icon">
+                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
@@ -125,17 +126,18 @@
               height="260" />
             <div class="card">
               <h3 class="title">Ольга Рєпіна</h3>
-              <p lang="en">Frontend Developer</p>
-              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+              <p lang="en" class="paragraf">Frontend Developer</p>
+              <div class="card-icon">
+                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
@@ -146,17 +148,18 @@
               height="260" />
             <div class="card">
               <h3 class="title">Микола Тарасов</h3>
-              <p lang="en">Marketing</p>
-              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+              <p lang="en" class="paragraf">Marketing</p>
+              <div class="card-icon">
+                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
@@ -166,17 +169,18 @@
             <img src="./images/myh-ermak.jpg" alt="Брюнет в чорній сорочці і окулярах" width="270" height="260" />
             <div class="card">
               <h3 class="title">Михайло Єрмаков</h3>
-              <p lang="en">UI Designer</p>
-              <div class="card-icon"><a href="#"><svg class="icon" width="20" height="20">
+              <p lang="en" class="paragraf">UI Designer</p>
+              <div class="card-icon">
+                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg></a>
-                <a href="#"><svg class="icon" width="20" height="20">
+                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
