--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       <ul class="list contacts">
         <li class="item">
           <a href=" mailto:info@devstudio.com" class="link"><svg class="icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-envelope"></use>
+              <use href="./images/icons.svg#icon-envelope"></use>
             </svg>info@devstudio.com</a>
         </li>
         <li class="item"><a href="tel:+380961111111" class="link"><svg class="icon" width="10" height="16">
-              <use href="./images/sprite.svg#icon-smartphone"></use>
+              <use href="./images/icons.svg#icon-smartphone"></use>
             </svg> +38 096 111 11 11</a></li>
       </ul>
     </div>
@@ -107,16 +107,16 @@
               <p lang="en" class="paragraf">Product Designer</p>
               <div class="card-icon">
                 <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg></a>
                 <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a>
                 <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a>
                 <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
             </div>
@@ -129,16 +129,16 @@
               <p lang="en" class="paragraf">Frontend Developer</p>
               <div class="card-icon">
                 <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg></a>
                 <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a>
                 <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a>
                 <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
             </div>
@@ -151,16 +151,16 @@
               <p lang="en" class="paragraf">Marketing</p>
               <div class="card-icon">
                 <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg></a>
                 <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a>
                 <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a>
                 <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
             </div>
@@ -172,20 +172,38 @@
               <p lang="en" class="paragraf">UI Designer</p>
               <div class="card-icon">
                 <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg></a>
                 <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg></a>
                 <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg></a>
                 <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg></a>
               </div>
             </div>
           </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Секція постійні клієнти -->
+    <section class="section regular-customers">
+      <div class="container">
+        <h2 class="title">Постійні клієнти</h2>
+        <ul class="list">
+          <li class="item">
+            <svg class="icon" width="106" height="60">
+              <use href="./images/icons.svg#icon-yaco"></use>
+            </svg>
+          </li>
+          <li class="item"></li>
+          <li class="item"></li>
+          <li class="item"></li>
+          <li class="item"></li>
+          <li class="item"></li>
         </ul>
       </div>
     </section>
