--- a/index.html
+++ b/index.html
@@ -195,15 +195,35 @@
         <h2 class="title">Постійні клієнти</h2>
         <ul class="list">
           <li class="item">
-            <svg class="icon" width="106" height="60">
-              <use href="./images/icons.svg#icon-yaco"></use>
-            </svg>
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-yaco"></use>
+              </svg></a>
           </li>
-          <li class="item"></li>
-          <li class="item"></li>
-          <li class="item"></li>
-          <li class="item"></li>
-          <li class="item"></li>
+          <li class="item">
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-tlhere"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-company"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-foster"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-brand"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a href="#" class="link"><svg class="icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-tagline"></use>
+              </svg></a>
+          </li>
         </ul>
       </div>
     </section>
