fixes icons our team

--- a/index.html
+++ b/index.html
@@ -105,20 +105,28 @@
             <div class="card">
               <h3 class="title">Ігор Дем'яненко</h3>
               <p lang="en" class="paragraf">Product Designer</p>
-              <div class="card-icon">
-                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></a>
-                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></a>
-                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></a>
-                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></a>
-              </div>
+              <ul class="list">
+                <li class="item">
+                  <a href="https://www.instagram.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://twitter.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.facebook.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.linkedin.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
@@ -127,20 +135,28 @@
             <div class="card">
               <h3 class="title">Ольга Рєпіна</h3>
               <p lang="en" class="paragraf">Frontend Developer</p>
-              <div class="card-icon">
-                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></a>
-                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></a>
-                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></a>
-                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></a>
-              </div>
+              <ul class="list">
+                <li class="item">
+                  <a href="https://www.instagram.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://twitter.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.facebook.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.linkedin.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
@@ -149,20 +165,28 @@
             <div class="card">
               <h3 class="title">Микола Тарасов</h3>
               <p lang="en" class="paragraf">Marketing</p>
-              <div class="card-icon">
-                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></a>
-                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></a>
-                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></a>
-                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></a>
-              </div>
+              <ul class="list">
+                <li class="item">
+                  <a href="https://www.instagram.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://twitter.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.facebook.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.linkedin.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="item">
@@ -170,20 +194,28 @@
             <div class="card">
               <h3 class="title">Михайло Єрмаков</h3>
               <p lang="en" class="paragraf">UI Designer</p>
-              <div class="card-icon">
-                <a href="https://www.instagram.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg></a>
-                <a href="https://twitter.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg></a>
-                <a href="https://www.facebook.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg></a>
-                <a href="https://www.linkedin.com/" class="ref-icon"><svg class="icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg></a>
-              </div>
+              <ul class="list">
+                <li class="item">
+                  <a href="https://www.instagram.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://twitter.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.facebook.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a>
+                </li>
+                <li class="item">
+                  <a href="https://www.linkedin.com/" class="link"><svg class="icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
