--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,13 @@
             <!--Контактна інформація, список контактів-->
             <ul class="list contacts">
                 <li class="item">
-                    <a href=" mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    <a href=" mailto:info@devstudio.com" class="link"><svg class="icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
-                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link"><svg class="icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg> +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -128,20 +132,47 @@
     <!--Підвал, логотип посилання на головну, адреса, список контактів-->
     <footer class="footer">
         <div class="container">
-            <a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
-                    class="logo-studio">Studio</span></a>
-            <address>
-                <ul class="list contacts-ft">
+            <div class="blok"><a href="./index.html" class="link logo"><span class="logo-web">Web</span><span
+                        class="logo-studio">Studio</span></a>
+                <address>
+                    <ul class="list contacts-ft">
+                        <li class="item">
+                            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
+                                rel="noopener noreferrer nofollow" class="link address">м. Київ, пр-т Лесі Українки,
+                                26</a>
+                        </li>
+                        <li class="item">
+                            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                        </li>
+                        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="social-network">
+                <span class="connect">Приєднуйтесь</span>
+                <ul class="list">
                     <li class="item">
-                        <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                            rel="noopener noreferrer nofollow" class="link address">м. Київ, пр-т Лесі Українки, 26</a>
+                        <a href="https://www.instagram.com/" class="link"><svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
                     </li>
                     <li class="item">
-                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                        <a href="https://twitter.com/" class="link"><svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a>
                     </li>
-                    <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                    <li class="item">
+                        <a href="https://www.facebook.com/" class="link"><svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="item">
+                        <a href="https://www.linkedin.com/" class="link"><svg class="icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
