--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <h2 class="visually-hidden">Наші сильні якості</h2>
         <ul class="list strengths">
           <li class="item">
-            <h3 class="title antena">Увага до деталей</h3>
+            <h3 class="title">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="item">
-            <h3 class="title clock">Пунктуальність</h3>
+            <h3 class="title">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="item">
-            <h3 class="title diagram">Планування</h3>
+            <h3 class="title">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="item">
-            <h3 class="title astronaut">Сучасні технології</h3>
+            <h3 class="title">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
