--- a/portfolio.html
+++ b/portfolio.html
@@ -58,72 +58,86 @@
                 <!-- Секція приклади наших робіт -->
                 <ul class="list examples">
                     <li class="item">
-                        <img src="./images/technocrack.jpg" alt="Інтернет сторінка з фотографіями людей" width="370"
-                            height="294" />
-                        <div class="signature">
-                            <h2 class="title">Технокряк</h2>
-                            <p>Веб-сайт</p>
-                        </div>
+                        <a href="#" class="link">
+                            <img src="./images/technocrack.jpg" alt="Інтернет сторінка з фотографіями людей" width="370"
+                                height="294" />
+                            <div class="signature">
+                                <h2 class="title">Технокряк</h2>
+                                <p>Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/poster-basketball.jpg" alt="Два чоловіки грають в баскетбол" width="370"
-                            height="294" />
-                        <div class="signature">
-                            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                            <p>Дизайн</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/poster-basketball.jpg"
+                                alt="Два чоловіки грають в баскетбол" width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                <p>Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/seafood-restaurant.jpg" alt="Риба" width="370" height="294" />
-                        <div class="signature">
-                            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                            <p>Додаток</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/seafood-restaurant.jpg" alt="Риба" width="370"
+                                height="294" />
+                            <div class="signature">
+                                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                                <p>Додаток</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/project-prime.jpg" alt="Великі бездротові навушники" width="370"
-                            height="294" />
-                        <div class="signature">
-                            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-                            <p>Маркетинг</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/project-prime.jpg" alt="Великі бездротові навушники"
+                                width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
+                                <p>Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/project-boxes.jpg" alt="біла і коричнева коробки" width="370" height="294" />
-                        <div class="signature">
-                            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-                            <p>Додаток</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/project-boxes.jpg" alt="біла і коричнева коробки"
+                                width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+                                <p>Додаток</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/inspiration-has-no-borders.jpg" alt="Монітор з інтернет сторінкою"
-                            width="370" height="294" />
-                        <div class="signature">
-                            <h2 class="title" lang="en">Inspiration has no Borders</h2>
-                            <p>Веб-сайт</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/inspiration-has-no-borders.jpg"
+                                alt="Монітор з інтернет сторінкою" width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                                <p>Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/limited-edition.jpg" alt="Розгорнута книга" width="370" height="294" />
-                        <div class="signature">
-                            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-                            <p>Дизайн</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/limited-edition.jpg" alt="Розгорнута книга"
+                                width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+                                <p>Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/lab-project.jpg" alt="Бірка з написом" width="370" height="294" />
-                        <div class="signature">
-                            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-                            <p>Маркетинг</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/lab-project.jpg" alt="Бірка з написом" width="370"
+                                height="294" />
+                            <div class="signature">
+                                <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+                                <p>Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item">
-                        <img src="./images/growing-business.jpg" alt="Людина друкує на клавіатурі лаптопа" width="370"
-                            height="294" />
-                        <div class="signature">
-                            <h2 class="title" lang="en">Growing Business</h2>
-                            <p>Додаток</p>
-                        </div>
+                        <a href="#" class="link"><img src="./images/growing-business.jpg"
+                                alt="Людина друкує на клавіатурі лаптопа" width="370" height="294" />
+                            <div class="signature">
+                                <h2 class="title" lang="en">Growing Business</h2>
+                                <p>Додаток</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
